--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ form {
 	color: #ffffff;
 	border-radius: 5px;
 	text-align: center;
-	margin-top: 2px;
 	cursor: pointer;
+	padding: 3px;
 }
 
 #clear {
@@ -64,4 +64,6 @@ form {
 .remover {
 	cursor: pointer;
 	color: red;
+	background: #000;
+	padding: 0 2px;
 }
