--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ form {
 	text-align: center;
 	cursor: pointer;
 	padding: 3px;
+	padding-top: 5px;
 }
 
 #clear {
@@ -61,7 +62,7 @@ form {
 	min-width: 402px;
 	padding: 15px;
 	border: 2px solid black;
-	max-height: 600px;
+	max-height: 615px;
 	
 }
 
